# tangential

./: .gitignore  CLAUDE.md  eslint.config.js  package.json  pnpm-lock.yaml
.plans/20260119_init/: plan.md
.plans/20260120_react-flow-bug/: plan.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: mod.rs  nodes.rs  projects.rs  settings.rs  trees.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/db/migrations/: 001_initial_schema.sql  002_add_soft_delete_fields.sql
src/components/Canvas/: ConversationNode.tsx  PathButtons.tsx  TreeCanvas.tsx  index.ts
src/components/ChatPanel/: ChatPanel.tsx
src/components/MarkdownRenderer/: MarkdownRenderer.tsx
src/components/MessageInput/: MessageInput.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/StreamingMessage/: StreamingMessage.tsx  index.ts
src/contexts/: CanvasContext.tsx  index.ts
src/hooks/: index.ts  useArrowKeyNavigation.ts  useStreamingResponse.ts  useTreeLayout.ts
src/lib/: api.ts  types.ts
