[package]
name = "tangential"
version = "0.1.0"
description = "A local-first desktop app for visualizing LLM conversations as branching trees"
authors = ["Rohan"]
edition = "2021"

[lib]
name = "tangential_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
directories = "6"

