[package]
name = "tangential"
version = "0.1.0"
description = "A local-first desktop app for visualizing LLM conversations as branching trees"
authors = ["Rohan"]
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lib]
name = "tangential_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
directories = "6"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"

